--- a/religious.html
+++ b/religious.html
@@ -50,10 +50,9 @@
 			</div>
 		</nav>
 		<div class="page-body">
-			<div class="jumbotronBanner text-center">
-			  	<h4 class="text-design mb-3">S A F A R I</h4>
-			  	<h6 class="text-design font-weight-bold text-center">ATHITI DEVO BHAV</h6>
-			  	<h6 class="text-design text-center">LET'S TOUR TO INDIA. INDIA'S FAMOUS TOURIST PLACES</h6>
+			<div class="jumbotronBanner pb-5 text-center">
+				<h4 class="text-design mb-3">S A F A R I</h4>
+			  	<h5 class="text-design text-center">INDIA'S FAMOUS RELIGIOUS PLACES</h5>
 			</div>
 			<div class="container">
 				<div class="row pt-4 pb-4">
