--- a/state.html
+++ b/state.html
@@ -27,10 +27,13 @@
 			      	</li>
 			      	<li class="nav-item dropdown">
 			        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          		CATEGORIES
+			          		FAMOUS PLACES
 			        	</a>
 				        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 				        	<ul class="nav navbar-nav">
+				          		<li>
+				          			<a class="dropdown-item" href="religious.html">RELIGIOUS</a>
+				          		</li>
 			      				<li>
 				          			<a class="dropdown-item" href="state.html">STATES & UT</a>
 				          		</li>
@@ -48,19 +51,19 @@
 		</nav>
 		<div class="page-body">
 			<div class="jumbotronBanner pb-5 text-center">
-			  	<h5 class="text-design text-center">INDIA'S STATE, DISTRICT, CITIES, POPULATION & AREA</h5>
+			  	<h5 class="text-design text-center">INDIA'S STATES, UNION TERRITORIES, DISTRICTS, CITIES, POPULATION & AREA</h5>
 			</div>
 			<div class="container table-responsive pt-4 pb-4 pl-0 pr-0">
 				<table class="table table-hover">
 					<thead>
 						<tr>
 							<th scope="col">SR.</th>
-							<th scope="col">STATE</th>
+							<th scope="col">STATES & UT</th>
 							<th scope="col">AREA</th>
 							<th scope="col">POPULATION</th>
 							<th scope="col">DISTRICTS</th>
 							<th scope="col">CAPITAL</th>
-							<th scope="col">OFFICIAL LANGUAGE</th>
+							<th scope="col" width="20%">OFFICIAL LANGUAGE</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -324,6 +327,81 @@
 							<td>23</td>
 							<td>Kolkata</td>
 							<td>Bengali</td>
+						</tr>
+						<tr>
+							<th colspan="7">UNION TERRITORY</th>
+						</tr>
+						<tr>
+							<th scope="row">1</th>
+							<td>Andaman and Nicobar Islands</td>
+							<td>8,249 km²</td>
+							<td>3.8 lakhs (2012)</td>
+							<td>3</td>
+							<td>Port Blair</td>
+							<td>Hindi, English</td>
+						</tr>
+						<tr>
+							<th scope="row">2</th>
+							<td>Chandigarh</td>
+							<td>114 km²</td>
+							<td>10.5 lakhs (2011)</td>
+							<td>1</td>
+							<td>Chandigarh</td>
+							<td>Punjabi, Hindi, English</td>
+						</tr>
+						<tr>
+							<th scope="row">3</th>
+							<td>Dadra and Nagar Haveli and Daman and Diu</td>
+							<td>603 km²</td>
+							<td>5.8 lakhs (2011)</td>
+							<td>3</td>
+							<td>Daman</td>
+							<td>Gujarati, Hindi, English</td>
+						</tr>
+						<tr>
+							<th scope="row">4</th>
+							<td>Delhi</td>
+							<td>1,490 km²</td>
+							<td>16.7 lakhs (2011)</td>
+							<td>11</td>
+							<td>New Delhi</td>
+							<td>Hindi, English</td>
+						</tr>
+						<tr>
+							<th scope="row">5</th>
+							<td>Jammu and Kashmir</td>
+							<td>55,538 km²</td>
+							<td>1.22 crores (2012)</td>
+							<td>20</td>
+							<td>Srinagar (Summer), Jammu (Winter)</td>
+							<td>Urdu, English</td>
+						</tr>
+						<tr>
+							<th scope="row">6</th>
+							<td>Ladakh</td>
+							<td>59,146 km²</td>
+							<td>2.7 lakhs (2011)</td>
+							<td>2</td>
+							<td>Leh, Kargil</td>
+							<td>Hindi, English</td>
+						</tr>
+						<tr>
+							<th scope="row">7</th>
+							<td>Lakshadweep</td>
+							<td>32.62 km²</td>
+							<td>70,365</td>
+							<td>1</td>
+							<td>Kavaratti</td>
+							<td>Malayalam, English</td>
+						</tr>
+						<tr>
+							<th scope="row">8</th>
+							<td>Puducherry</td>
+							<td>483 km²</td>
+							<td>13.9 lakhs (2011)</td>
+							<td>4</td>
+							<td>Pondicherry	</td>
+							<td>Tamil, English, French</td>
 						</tr>
 					</tbody>
 				</table>
