--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Natural</title>
+		<title>SAFARI</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -12,11 +12,11 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  	<link rel="stylesheet" href="css/style.css">
-
+	  	<script src="js/custom.js"></script>
 	</head>
 	<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 		<nav class="navbar navbar-expand-lg">
-			<a class="navbar-brand" href="index.html">Logo</a>
+			<a class="navbar-brand" href="index.html">SAFARI</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="navbar-toggler-icon fa fa-bars" aria-hidden="true"></i>
 			</button>
@@ -28,18 +28,24 @@
 			      	</li>
 			      	<li class="nav-item dropdown">
 			        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          		CATEGORIES
+			          		FAMOUS PLACES
 			        	</a>
 				        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 				        	<ul class="nav navbar-nav">
-			      				<li>
-				          			<a class="dropdown-item" href="state.html">STATES & UT</a>
+				        		<li>
+				          			<a class="dropdown-item" href="beaches.html">BEACHES</a>
+				          		</li>
+				          		<li>
+				          			<a class="dropdown-item" href="religious.html">RELIGIOUS</a>
+				          		</li>
+				          		<li>
+				          			<a class="dropdown-item" href="topVisited.html">TOP VISITED</a>
 				          		</li>
 				        	</ul>
 				        </div>
 			      	</li>
 			      	<li class="nav-item">
-						<a class="nav-link" href="#">ABOUT</a>
+						<a class="nav-link" href="state.html">STATES & UT</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">CONTACT</a>
