--- a/state.html
+++ b/state.html
@@ -12,6 +12,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  	<link rel="stylesheet" href="css/style.css">
+	  	<script src="js/custom.js"></script>
 	</head>
 	<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 		<nav class="navbar navbar-expand-lg">
@@ -31,17 +32,20 @@
 			        	</a>
 				        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 				        	<ul class="nav navbar-nav">
+				        		<li>
+				          			<a class="dropdown-item" href="beaches.html">BEACHES</a>
+				          		</li>
 				          		<li>
 				          			<a class="dropdown-item" href="religious.html">RELIGIOUS</a>
 				          		</li>
-			      				<li>
-				          			<a class="dropdown-item" href="state.html">STATES & UT</a>
+				          		<li>
+				          			<a class="dropdown-item" href="topVisited.html">TOP VISITED</a>
 				          		</li>
 				        	</ul>
 				        </div>
 			      	</li>
 			      	<li class="nav-item">
-						<a class="nav-link" href="#">ABOUT</a>
+						<a class="nav-link" href="state.html">STATES & UT</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">CONTACT</a>
