--- a/topVisited.html
+++ b/topVisited.html
@@ -60,8 +60,21 @@
 			  	<h6 class="text-design text-center">LET'S TOUR TO INDIA. INDIA'S FAMOUS TOURIST PLACES</h6>
 			</div>
 			<div class="container">
-				<div class="row pt-4 pb-4 ">
+				<div class="row pt-4 pb-4">
 					<div class="col-md-4">
+						<div class="card mb-4 p-1">
+							<div class="card-img">
+								<img class="card-img-top" src="images/beaches/agattiIsland.jpg" alt="Card image cap">
+							</div>
+						  	<div class="card-body">
+						    	<h5 class="card-title">AGATTI ISLAND</h5>
+						    	<h6>Agatti Island is a 7.6 km long island, situated on a coral atoll called Agatti atoll in the Union Territory of Lakshadweep, India.</h6>
+								<h6>Most people speak Malayalam and English and Tamil_language.</h6>
+								<h6>Agatti is one of the Lakshadweep islands open to tourism. Visitors, however, are allowed to the Island under certain restrictions.</h6>
+								<h6>They are required to obtain Entry Permit from the Lakshadweep Administration for entering or visiting the island.Entry Permit is issued based on the visitor having a confirmed place to stay. </h6>
+								<h6>There are only two hotels or resorts in Agatti: Agatti Island Beach Resort (AIBER) and the other is Sea Shells Beach Resort. A road runs through the island, which can be best enjoyed by hiring a bicycle available at many places.</h6>
+						  	</div>
+						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
 								<img class="card-img-top" src="images/safari/tajMahal.jpg" alt="Card image cap">
@@ -77,14 +90,32 @@
 						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/safari/ranthambore.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/safari/indiaGate.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">RANTHAMBORE NATIONAL PARK</h5>
-						    	<h6>Ranthambhore National Park or Ranthambhore is a national park in northern India, initially covering 282 km² at the time it was formed.</h6>
-								<h6>Ranthambhore was established as the Sawai Madhopur Game Sanctuary in 1955 by the Government of India and was declared one of the Project Tiger reserves in 1973. Ranthambhore became a national park on 1 November 1980. In 1984, the adjacent forests were declared the Sawai Man Singh Sanctuary and Keladevi Sanctuary. In 1992, the Tiger Reserve was expanded to include the adjoining Keladevi Sanctuary in the north and Sawai Mansingh sanctuary to the south along with other forests</h6>
-								<h6>Today it covers an area of 1334 sq. km. Ranthambhore wildlife sanctuary is known for its Bengal tigers, and is a popular place in India to see these animals in their natural jungle habitat</h6> 
-								<h6>Tigers can be easily spotted even in the daytime. The best times for tiger sightings at Ranthambhore National Park are deemed to be in November and May.</h6>
+						    	<h5 class="card-title">INDIA GATE</h5>
+						    	<h6>The India Gate is a war memorial located astride the Rajpath, on the eastern edge of the "ceremonial axis" of New Delhi, formerly called Kingsway.</h6>
+								<h6>It stands as a memorial to 70,000 soldiers of the British Indian Army who died in between 1914–1921 in the First World War, in France, Flanders, Mesopotamia, Persia, East Africa, Gallipoli and elsewhere in the Near and the Far East, and the third Anglo-Afghan War.</h6>
+								<h6>13,300 servicemen's names, including some soldiers and officers from the United Kingdom, are inscribed on the gate.</h6>
+								<h6>Designed by Sir Edwin Lutyens, the gate evokes the architectural style of the triumphal arch such as the Arch of Constantine, in Rome, and is often compared to the Arc de Triomphe in Paris, and the Gateway of India in Mumbai.</h6>
+								<h6>Following the Bangladesh Liberation war in 1972, a structure consisting of a black marble plinth with a reversed rifle, capped by a war helmet and bounded by four eternal flames, was built beneath the archway.</h6>
+						  	</div>
+						</div>
+						
+					</div>
+					<div class="col-md-4">
+						<div class="card mb-4 p-1">
+							<div class="card-img">
+								<img class="card-img-top" src="images/religious/harmandirSahib.jpg" alt="Card image cap">
+							</div>
+						  	<div class="card-body">
+						    	<h5 class="card-title">GOLDEN TEMPLE</h5>
+						    	<h6>The Harmandir Sahib, meaning "abode of God", also known as Golden Temple, is a Gurdwara located in the city of Amritsar, Punjab, India. It is the preeminent spiritual site of Sikhism</h6>
+								<h6>The Gurdwara is built around a man-made pool that was completed by Guru Ram Das in 1577. Guru Arjan, the fifth Guru of Sikhism, requested Sai Mir Mian Mohammed, a Muslim Pir of Lahore, to lay its foundation stone in 1589.</h6>
+								<h6>The Gurdwara is spiritually the most significant shrine in Sikhism.</h6> 
+								<h6>The Harmandir Sahib is an open house of worship for all men and women, from all walks of life and faith. It has a square plan with four entrances, has a circumambulation path around the pool. The complex is a collection of buildings around the sanctum and the pool.</h6>
+								<h6> One of these is Akal Takht, the chief center of religious authority of Sikhism. Additional buildings include a clock tower, the offices of Gurdwara Committee, a Museum and a langar – a free Sikh community run kitchen that serves a simple vegetarian meal to all visitors without discrimination.</h6>
+								<h6>Over 100,000 people visit the holy shrine daily for worship. The Gurdwara complex has been nominated as a UNESCO World Heritage Site.</h6>
 							</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -100,33 +131,6 @@
 								<h6>Havelock Island is part of Ritchie’s Archipelago, in India’s Andaman Islands. It’s known for its dive sites and beaches, like Elephant Beach, with its coral reefs. Crescent-shaped Radhanagar Beach is a popular spot for watching the sunset.</h6>
 								<h6>On the island’s east side, rocky sections mark long, tree-lined Vijaynagar Beach. The island's forested interior is home to birdlife such as white-headed mynas and woodpeckers.</h6>
 							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card mb-4 p-1">
-							<div class="card-img">
-								<img class="card-img-top" src="images/safari/indiaGate.jpg" alt="Card image cap">
-							</div>
-						  	<div class="card-body">
-						    	<h5 class="card-title">INDIA GATE</h5>
-						    	<h6>The India Gate is a war memorial located astride the Rajpath, on the eastern edge of the "ceremonial axis" of New Delhi, formerly called Kingsway.</h6>
-								<h6>It stands as a memorial to 70,000 soldiers of the British Indian Army who died in between 1914–1921 in the First World War, in France, Flanders, Mesopotamia, Persia, East Africa, Gallipoli and elsewhere in the Near and the Far East, and the third Anglo-Afghan War.</h6>
-								<h6>13,300 servicemen's names, including some soldiers and officers from the United Kingdom, are inscribed on the gate.</h6>
-								<h6>Designed by Sir Edwin Lutyens, the gate evokes the architectural style of the triumphal arch such as the Arch of Constantine, in Rome, and is often compared to the Arc de Triomphe in Paris, and the Gateway of India in Mumbai.</h6>
-								<h6>Following the Bangladesh Liberation war in 1972, a structure consisting of a black marble plinth with a reversed rifle, capped by a war helmet and bounded by four eternal flames, was built beneath the archway.</h6>
-						  	</div>
-						</div>
-						<div class="card mb-4 p-1">
-							<div class="card-img">
-								<img class="card-img-top" src="images/safari/qutubMinar.jpg" alt="Card image cap">
-							</div>
-						  	<div class="card-body">
-						    	<h5 class="card-title">QUTUB MINAR</h5>
-						    	<h6>The Qutb Minar, also spelled as Qutub Minar and Qutab Minar, is a minaret and "victory tower" that forms part of the Qutb complex which is built on hindu temple, a UNESCO World Heritage Site in the Mehrauli area of Delhi, India.</h6>
-								<h6>Qutb Minar was 73-metres tall before the final, fifth section was added after 1369. The tower tapers, and has a 14.3 metres base diameter, reducing to 2.7 metres at the top of the peak.</h6>
-								<h6>It contains a spiral staircase of 379 steps. Its closest comparator is the 62-metre all-brick Minaret of Jam in Afghanistan, of c.1190, a decade or so before the probable start of the Delhi tower. The surfaces of both are elaborately decorated with inscriptions and geometric patterns; in Delhi the shaft is fluted with "superb stalactite bracketing under the balconies" at the top of each stage.</h6>
-								<h6>In general minarets were slow to be used in India, and are often detached from the main mosque where they exist.</h6>
-						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
@@ -170,19 +174,19 @@
 						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/safari/rashtrapatiBhavan.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/religious/bodhGaya.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">RASHTRAPATI BHAVAN</h5>
-						    	<h6>The Rashtrapati Bhavan is the official residence of the President of India located at the Western end of Rajpath in New Delhi, India.</h6>
-								<h6>Rashtrapati Bhavan may refer to only the 340-room main building that has the president's official residence, including reception halls, guest rooms and offices, also called the mansion;</h6>
-								<h6>it may also refer to the entire 130-hectare Presidential Estate that additionally includes huge presidential gardens, large open spaces, residences of bodyguards and staff, stables, other offices and utilities within its perimeter walls. </h6>
-								<h6>In terms of area, it is the largest residence of any head of state in the world.</h6>
+						    	<h5 class="card-title">BODH GAYA</h5>
+						    	<h6>Bodh Gaya is a religious site and place of pilgrimage associated with the Mahabodhi Temple Complex in Gaya district in the Indian state of Bihar.</h6>
+								<h6>It is famous as it is the place where Gautama Buddha is said to have attained Enlightenment (Pali: bodhi) under what became known as the Bodhi Tree. Since antiquity, Bodh Gaya has remained the object of pilgrimage and veneration for both Hindus and Buddhists.</h6>
+								<h6>Bodh Gaya is the most holy place for Buddhists. Situated by the bank of river Neranjana the place was then known as Uruwela. King Ashoka was the first to build a temple here.</h6>
+								<h6></h6>
+								<h6></h6>
 						  	</div>
 						</div>
 					</div>
 				</div>
-				<div class="row"></div>
 			</div>
 		</div>
 		<footer class="container-fluid text-center">
