--- a/religious.html
+++ b/religious.html
@@ -12,6 +12,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  	<link rel="stylesheet" href="css/style.css">
+	  	<script src="js/custom.js"></script>
 	</head>
 	<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 		<nav class="navbar navbar-expand-lg">
@@ -31,17 +32,20 @@
 			        	</a>
 				        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 				        	<ul class="nav navbar-nav">
+				        		<li>
+				          			<a class="dropdown-item" href="beaches.html">BEACHES</a>
+				          		</li>
 				          		<li>
 				          			<a class="dropdown-item" href="religious.html">RELIGIOUS</a>
 				          		</li>
-			      				<li>
-				          			<a class="dropdown-item" href="state.html">STATES & UT</a>
+				          		<li>
+				          			<a class="dropdown-item" href="topVisited.html">TOP VISITED</a>
 				          		</li>
 				        	</ul>
 				        </div>
 			      	</li>
 			      	<li class="nav-item">
-						<a class="nav-link" href="#">ABOUT</a>
+						<a class="nav-link" href="state.html">STATES & UT</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">CONTACT</a>
@@ -59,121 +63,87 @@
 					<div class="col-md-4">
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/TajMahal.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/religious/harmandirSahib.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">TAJ MAHAL</h5>
-						    	<h6>The Taj Mahal is an ivory-white marble mausoleum on the south bank of the Yamuna river in the Indian city of Agra.</h6>
-								<h6>It was commissioned in 1632 by the Mughal emperor Shah Jahan to house the tomb of his favourite wife, Mumtaz Mahal; it also houses the tomb of Shah Jahan himself.</h6>
-								<h6>The tomb is the centrepiece of a 17-hectare complex, which includes a mosque and a guest house, and is set in formal gardens bounded on three sides by a crenellated wall.</h6> 
-								<h6>Construction of the mausoleum was essentially completed in 1643, but work continued on other phases of the project for another 10 years. The Taj Mahal complex is believed to have been completed in its entirety in 1653 at a cost estimated at the time to be around 32 million rupees, which in 2020 would be approximately 70 billion rupees.</h6>
-								<h6>The construction project employed some 20,000 artisans under the guidance of a board of architects led by the court architect to the emperor, Ustad Ahmad Lahauri.</h6>
+						    	<h5 class="card-title">GOLDEN TEMPLE</h5>
+						    	<h6>The Harmandir Sahib, meaning "abode of God", also known as Golden Temple, is a Gurdwara located in the city of Amritsar, Punjab, India. It is the preeminent spiritual site of Sikhism</h6>
+								<h6>The Gurdwara is built around a man-made pool that was completed by Guru Ram Das in 1577. Guru Arjan, the fifth Guru of Sikhism, requested Sai Mir Mian Mohammed, a Muslim Pir of Lahore, to lay its foundation stone in 1589.</h6>
+								<h6>The Gurdwara is spiritually the most significant shrine in Sikhism.</h6> 
+								<h6>The Harmandir Sahib is an open house of worship for all men and women, from all walks of life and faith. It has a square plan with four entrances, has a circumambulation path around the pool. The complex is a collection of buildings around the sanctum and the pool.</h6>
+								<h6> One of these is Akal Takht, the chief center of religious authority of Sikhism. Additional buildings include a clock tower, the offices of Gurdwara Committee, a Museum and a langar – a free Sikh community run kitchen that serves a simple vegetarian meal to all visitors without discrimination.</h6>
+								<h6>Over 100,000 people visit the holy shrine daily for worship. The Gurdwara complex has been nominated as a UNESCO World Heritage Site.</h6>
 							</div>
 						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/Ranthambore.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/religious/dwarkadhish.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">RANTHAMBORE NATIONAL PARK</h5>
-						    	<h6>Ranthambhore National Park or Ranthambhore is a national park in northern India, initially covering 282 km² at the time it was formed.</h6>
-								<h6>Ranthambhore was established as the Sawai Madhopur Game Sanctuary in 1955 by the Government of India and was declared one of the Project Tiger reserves in 1973. Ranthambhore became a national park on 1 November 1980. In 1984, the adjacent forests were declared the Sawai Man Singh Sanctuary and Keladevi Sanctuary. In 1992, the Tiger Reserve was expanded to include the adjoining Keladevi Sanctuary in the north and Sawai Mansingh sanctuary to the south along with other forests</h6>
-								<h6>Today it covers an area of 1334 sq. km. Ranthambhore wildlife sanctuary is known for its Bengal tigers, and is a popular place in India to see these animals in their natural jungle habitat</h6> 
-								<h6>Tigers can be easily spotted even in the daytime. The best times for tiger sightings at Ranthambhore National Park are deemed to be in November and May.</h6>
-							</div>
-						</div>
-						<div class="card mb-4 p-1">
-							<div class="card-img">
-								<img class="card-img-top" src="images/SwarajDweep.jpg" alt="Card image cap">
-							</div>
-						  	<div class="card-body">
-						    	<h5 class="card-title">SWARAJ DWEEP</h5>
-						    	<h6>Havelock Island, officially Swaraj Island, is the one of the largest islands that comprise a chain of islands to the east of Great Andaman in the Andaman Islands.</h6>
-								<h6>It belongs to the South Andaman administrative district,</h6>
-								<h6>part of the Indian union territory of Andaman and Nicobar Islands.</h6> 
-								<h6>The island is 41 km northeast of the capital city, Port Blair.</h6>
-								<h6>Havelock Island is part of Ritchie’s Archipelago, in India’s Andaman Islands. It’s known for its dive sites and beaches, like Elephant Beach, with its coral reefs. Crescent-shaped Radhanagar Beach is a popular spot for watching the sunset.</h6>
-								<h6>On the island’s east side, rocky sections mark long, tree-lined Vijaynagar Beach. The island's forested interior is home to birdlife such as white-headed mynas and woodpeckers.</h6>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card mb-4 p-1">
-							<div class="card-img">
-								<img class="card-img-top" src="images/IndiaGate.jpg" alt="Card image cap">
-							</div>
-						  	<div class="card-body">
-						    	<h5 class="card-title">INDIA GATE</h5>
-						    	<h6>The India Gate is a war memorial located astride the Rajpath, on the eastern edge of the "ceremonial axis" of New Delhi, formerly called Kingsway.</h6>
-								<h6>It stands as a memorial to 70,000 soldiers of the British Indian Army who died in between 1914–1921 in the First World War, in France, Flanders, Mesopotamia, Persia, East Africa, Gallipoli and elsewhere in the Near and the Far East, and the third Anglo-Afghan War.</h6>
-								<h6>13,300 servicemen's names, including some soldiers and officers from the United Kingdom, are inscribed on the gate.</h6>
-								<h6>Designed by Sir Edwin Lutyens, the gate evokes the architectural style of the triumphal arch such as the Arch of Constantine, in Rome, and is often compared to the Arc de Triomphe in Paris, and the Gateway of India in Mumbai.</h6>
-								<h6>Following the Bangladesh Liberation war in 1972, a structure consisting of a black marble plinth with a reversed rifle, capped by a war helmet and bounded by four eternal flames, was built beneath the archway.</h6>
-						  	</div>
-						</div>
-						<div class="card mb-4 p-1">
-							<div class="card-img">
-								<img class="card-img-top" src="images/QutubMinar.jpg" alt="Card image cap">
-							</div>
-						  	<div class="card-body">
-						    	<h5 class="card-title">QUTUB MINAR</h5>
-						    	<h6>The Qutb Minar, also spelled as Qutub Minar and Qutab Minar, is a minaret and "victory tower" that forms part of the Qutb complex which is built on hindu temple, a UNESCO World Heritage Site in the Mehrauli area of Delhi, India.</h6>
-								<h6>Qutb Minar was 73-metres tall before the final, fifth section was added after 1369. The tower tapers, and has a 14.3 metres base diameter, reducing to 2.7 metres at the top of the peak.</h6>
-								<h6>It contains a spiral staircase of 379 steps. Its closest comparator is the 62-metre all-brick Minaret of Jam in Afghanistan, of c.1190, a decade or so before the probable start of the Delhi tower. The surfaces of both are elaborately decorated with inscriptions and geometric patterns; in Delhi the shaft is fluted with "superb stalactite bracketing under the balconies" at the top of each stage.</h6>
-								<h6>In general minarets were slow to be used in India, and are often detached from the main mosque where they exist.</h6>
-						  	</div>
-						</div>
-						<div class="card mb-4 p-1">
-							<div class="card-img">
-								<img class="card-img-top" src="images/DarjeelingHimalayanRailway.jpg" alt="Card image cap">
-							</div>
-						  	<div class="card-body">
-						    	<h5 class="card-title">DARJEELING HIMALAYAN RAILWAY</h5>
-						    	<h6>The Darjeeling Himalayan Railway, also known as the DHR or the Toy Train, is a 2 ft gauge railway that runs between New Jalpaiguri and Darjeeling in the Indian state of West Bengal. Built between 1879 and 1881, it is about 88 km long.</h6>
-								<h6>It climbs from about 100 m above sea level at New Jalpaiguri to about 2,200 m at Darjeeling, using six zig zags and five loops to gain altitude.</h6>
-								<h6>Six diesel locomotives handle most of the scheduled service, with daily tourist trains from Darjeeling to Ghum – India's highest railway station – and the steam-hauled Red Panda service from Darjeeling to Kurseong.</h6>
-								<h6>Steam-enthusiast specials are hauled by vintage British-built B-Class steam locomotives. The railway's headquarters are at Kurseong. On 2 December 1999, UNESCO declared the DHR a World Heritage Site. Two more railway lines were later added, and the site became known as one of the mountain railways of India.</h6>
+						    	<h5 class="card-title">SHREE DWARKADHISH</h5>
+						    	<h6>The Dwarkadhish temple, also known as the Jagat Mandir and occasionally spelled Dwarakadheesh, is a Hindu temple dedicated to the god Krishna, who is worshiped here by the name Dwarkadhish, or 'King of Dwarka'.</h6>
+								<h6>The temple is located at Dwarka, Gujarat, India. The main shrine of the five storied building, supported by 72 pillars, is known as Jagat Mandir or Nija Mandir, archaeological findings suggest it to be 2,000 - 2,200 years old</h6>
+								<h6>According to tradition, the original temple was believed to have been built by Krishna's grandson, Vajranabha, over the hari-griha (Krishna's residential place). The original structure was destroyed by Mahmud Begada in 1472, and subsequently rebuilt in the 15th-16th century.</h6>
+								<h6>The original temple had been built by Krishna’s grandson over the Harigraha, the palace of Krishna. The temple has an assembly hall or audience hall. There are two important entrances to the temple, one is the main entry door which is called the Moksha Dwar (meaning "Door to Salvation") and the exit door which is known as the Swarga Dwar (meaning "Gate to Heaven").</h6>
+								<h6>The temple was enlarged in the 15th- 16th century.</h6>
 						  	</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/Amber.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/religious/lotus.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">AMBER PALACE</h5>
-						    	<h6>Amer Fort or Amber Fort is a fort located in Amer, Rajasthan, India. Amer is a town with an area of 4 square kilometres located 11 kilometres from Jaipur, the capital of Rajasthan</h6>
-								<h6>The town of Amer and the Amber Fort were originally built by the Meena's, and later it was ruled by Raja Man Singh I. Located high on a hill, it is the principal tourist attraction in Jaipur.</h6>
-								<h6>Amer Fort is known for its artistic style elements. With its large ramparts and series of gates and cobbled paths, the fort overlooks Maota Lake, which is the main source of water for the Amer Palace. Mughal architecture greatly influenced the architectural style of several buildings of the fort.</h6>
-								<h6>
-								<h6>Constructed of red sandstone and marble, the attractive, opulent palace is laid out on four levels, each with a courtyard.
-								</h6>
+						    	<h5 class="card-title">LOTUS TEMPLE</h5>
+						    	<h6>The Lotus Temple, located in Delhi, India, is a Baháʼí House of Worship that was dedicated in December 1986.</h6>
+								<h6>Notable for its flowerlike shape, it has become a prominent attraction in the city.</h6>
+								<h6>Like all Baháʼí Houses of Worship, the Lotus Temple is open to all, regardless of religion or any other qualification.</h6>
+								<h6>The building is composed of 27 free-standing marble-clad "petals" arranged in clusters of three to form nine sides, with nine doors opening onto a central hall with a height of slightly over 34.27 metres and a capacity of 2,500 people.</h6>
+								<h6>The Lotus Temple has won numerous architectural awards and has been featured in many newspaper and magazine articles. A 2001 CNN report referred to it as the most visited building in the world.</h6>
+								<h6>The Baháʼí Faith teaches that a Baháʼí House of Worship should be a space for people of all religions to gather, reflect, and worship.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/Ganges.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/religious/bodhGaya.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">GANGES</h5>
-						    	<h6>The Ganges, or Ganga, is a trans-boundary river of Asia which flows through India and Bangladesh.</h6>
-								<h6>The 2,601 km river originates from the Gangotri Glacier of western Himalayas in the Indian state of Uttarakhand, and flows south and east through the Gangetic Plain of India and Bangladesh, eventually emptying into the Bay of Bengal.</h6>
-								<h6>The Ganges is a lifeline to millions who live along its course. It is a sacred river and worshipped as the goddess Ganga in Hinduism</h6>
-								<h6>It has been important historically; many former provincial or imperial capitals have been located on its banks. The Ganges is threatened by severe pollution. This poses a danger not only to humans but also to animals; the Ganges is home to approximately 140 species of fish and 90 species of amphibians</h6>
-								<h6>The river also contains reptiles and mammals, including critically endangered species such as the Gharial and South Asian river dolphin.</h6>
+						    	<h5 class="card-title">BODH GAYA</h5>
+						    	<h6>Bodh Gaya is a religious site and place of pilgrimage associated with the Mahabodhi Temple Complex in Gaya district in the Indian state of Bihar.</h6>
+								<h6>It is famous as it is the place where Gautama Buddha is said to have attained Enlightenment (Pali: bodhi) under what became known as the Bodhi Tree. Since antiquity, Bodh Gaya has remained the object of pilgrimage and veneration for both Hindus and Buddhists.</h6>
+								<h6>Bodh Gaya is the most holy place for Buddhists. Situated by the bank of river Neranjana the place was then known as Uruwela. King Ashoka was the first to build a temple here.</h6>
+								<h6></h6>
+								<h6></h6>
+						  	</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card mb-4 p-1">
+							<div class="card-img">
+								<img class="card-img-top" src="images/religious/rishikesh.jpg" alt="Card image cap">
+							</div>
+						  	<div class="card-body">
+						    	<h5 class="card-title">RISHIKESH</h5>
+						    	<h6>Rishikesh, also known as Hrishikesh. Located in the foothills of the Himalayas in northern India, it is known as the "Gateway to the Garhwal Himalayas" and "Yoga Capital of the World".</h6>
+								<h6>It is known as the pilgrimage town and regarded as one of the holiest places to Hindus.</h6>
+								<h6>The city has hosted the annual International Yoga Festival on the first week of March since 1989.</h6>
+								<h6>Rishikesh is a city in India’s northern state of Uttarakhand, in the Himalayan foothills beside the Ganges River.</h6>
+								<h6>The river is considered holy, and the city is renowned as a center for studying yoga and meditation.</h6>
+								<h6>Temples and ashrams (centers for spiritual studies) line the eastern bank around Swarg Ashram, a traffic-free, alcohol-free and vegetarian enclave upstream from Rishikesh town.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/RashtrapatiBhavan.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/religious/meenakshiTemple.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">RASHTRAPATI BHAVAN</h5>
-						    	<h6>The Rashtrapati Bhavan is the official residence of the President of India located at the Western end of Rajpath in New Delhi, India.</h6>
-								<h6>Rashtrapati Bhavan may refer to only the 340-room main building that has the president's official residence, including reception halls, guest rooms and offices, also called the mansion;</h6>
-								<h6>it may also refer to the entire 130-hectare Presidential Estate that additionally includes huge presidential gardens, large open spaces, residences of bodyguards and staff, stables, other offices and utilities within its perimeter walls. </h6>
-								<h6>In terms of area, it is the largest residence of any head of state in the world.</h6>
+						    	<h5 class="card-title">MEENAKSHI AMMAN TEMPLE</h5>
+						    	<h6>Meenakshi Temple is a historic Hindu temple located on the southern bank of the Vaigai River in the temple city of Madurai, Tamil Nadu, India.</h6>
+								<h6>It is dedicated to Meenakshi, a form of Parvati, and her consort, Sundareshwar, a form of Shiva.</h6>
+								<h6>The temple is at the center of the ancient temple city of Madurai mentioned in the Tamil Sangam literature, with the goddess temple mentioned in 6th century CE texts.</h6>
+								<h6>The Meenakshi temple is located in the heart of historic Madurai city, about a kilometer south of the Vaigai River. It is about 460 kilometres (290 mi) southwest from Chennai, the state capital.</h6>
+								<h6> The temple complex is well connected with road network, near a major railway junction and an airport with daily services.</h6>
 						  	</div>
 						</div>
 					</div>
