--- a/beaches.html
+++ b/beaches.html
@@ -26,6 +26,9 @@
 			      	<li class="nav-item">
 			        	<a class="nav-link" href="index.html">HOME</a>
 			      	</li>
+			      	<li class="nav-item">
+						<a class="nav-link" href="state.html">STATES & UT</a>
+					</li>
 			      	<li class="nav-item dropdown">
 			        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			          		FAMOUS PLACES
@@ -38,15 +41,9 @@
 				          		<li>
 				          			<a class="dropdown-item" href="religious.html">RELIGIOUS</a>
 				          		</li>
-				          		<li>
-				          			<a class="dropdown-item" href="topVisited.html">TOP VISITED</a>
-				          		</li>
 				        	</ul>
 				        </div>
 			      	</li>
-			      	<li class="nav-item">
-						<a class="nav-link" href="state.html">STATES & UT</a>
-					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">CONTACT</a>
 					</li>
@@ -63,17 +60,16 @@
 					<div class="col-md-4">
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/beaches/bagaBeach.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/beaches/serenityBeach.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">BAGA BEACH</h5>
-						    	<h6>Baga Beach is a popular beach and tourist destination in North Goa.</h6>
-								<h6>Baga is located at the north end of the contiguous beach stretch that starts from Sinquerim, Candolim, leads to Calangute, and then to Baga.</h6>
-								<h6>The beach contains rows of shacks and fishing boats, and at high tide the beach is narrow.</h6>
-								<h6>The beach is named after the Baga Creek, which empties into the Arabian Sea at the north end of the beach.</h6>
-								<h6>Baga Beach is also famous for water sports, such as parasailing and banana rides, and dolphin cruises. In Baga Beach, new parking has been constructed for around 800 cars or more, and there is baga creek bridge which connects northern part like Arpora, Anjuna etc..</h6>
-								<h6><b>Best time to visit : </b>October to January</h6>
-								<h6><b>Things to do : </b>Watersports, relaxing at the beach shacks, partying with the lively night culture, shop at the nearby local markets</h6>
+						    	<h5 class="card-title">SERENITY BEACH</h5>
+						    	<h6>As the name suggests, the Serenity beach is perfectly serene and tranquil with an abundance of views that blow your mind.</h6>
+								<h6>The scenic view and seclusion of the beach make it ideal for spending some quality time with your special one.</h6>
+								<h6>Best time to visit is October to February</h6>
+								<h6>Things to do is take a stroll on the pathway of the beach, enjoy the perfect sunsets.</h6>
+								<h6>The Serenity beach is located towards the northern side of Pondicherry and is easily accessible from the Pondicherry bus stand. The bus stand located at the centre of the city is located just 10 kms away from the beach and one can get autos and buses from there.</h6>
+								<h6><b>Best time to visit : </b>The best time to visit Serenity beach in Pondicherry is from early morning to evening 6.30 pm. For enjoying the sunrise, you can visit the beach on early dawn. The surfing activities start from daytime and you can enjoy the sand and sun throughout the day until evening.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -89,6 +85,7 @@
 								<h6>It is about one mile (approximately 1.61 km) long and is crescent-shaped; one can view the entire beach from either end.</h6>
 								<h6>Both ends of the beach consist of rocks jutting out into the sea.</h6>
 								<h6>Things to do on Palolem beach include yoga classes, dolphin-spotting trips, Ayurvedic massages and silent discos.</h6>
+								<h6><b>Best time to visit : </b>You can plan your visit anytime between 6:00 am to 10:00 am throughout the week.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -102,6 +99,7 @@
 								<h6>The Marina beach was famed for its pristine beauty, jolly ambiance, and rich ecosystems.</h6>
 								<h6>Bathing and swimming at the Marina Beach are legally prohibited because of the dangers, as the undercurrent is very turbulent. It is one of the most crowded beaches in the country</h6>
 								<h6>Marina beach is a major tourist attraction of the city. People visiting Chennai make a point to visit the beach.</h6>
+								<h6><b>Best time to visit : </b>November to February</h6>
 						  	</div>
 						</div>
 					</div>
@@ -115,8 +113,8 @@
 						    	<h6>Havelock Island, officially Swaraj Island, is the one of the largest islands that comprise a chain of islands to the east of Great Andaman in the Andaman Islands.</h6>
 								<h6>It belongs to the South Andaman administrative district, part of the Indian union territory of Andaman and Nicobar Islands. The island is 41 km (25 mi) northeast of the capital city, Port Blair.</h6>
 								<h6>Radhanagar Beach on the western coast, also known as Number 7 Beach, is one of the most popular beaches on Havelock and was named "Best Beach in Asia" by Time in 2004.</h6>
-								<h6>Other notable beaches include Elephant Beach on the northwest coast and Vijay Nagar Beach (No. 5), Beach No. 3 and Beach No. 1 on the east coast. Kalapathar is another famous beach.</h6>
 								<h6>The island can be reached from Port Blair by government-operated ferries and private cruises. There are also helicopter services. A local bus connects the jetty and villages on an hourly circuit.</h6>
+								<h6><b>Best time to visit : </b>Havelock experiences mild winters and the temperature generally ranges between 15 degree Celcius and 34 degree Celcius. It's the ideal time to plan a trip and it's no wonder that most tourists, especially honeymooners, like to travel here in this period. You can easily plan all beach activities and water sports.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -130,6 +128,7 @@
 								<h6>Lighthouse Beach is the one most frequented by tourists, Lighthouse Beach got its name due to the old Vizhinjam Lighthouse located on a 35 meter high on top of the Kurumkal hillock. The lighthouse is built using stones, is colored in red and white bands and enjoys a height of 118 feet.</h6>
 								<h6>Hawa Beach, ranks second, in the early day, is a beehive of activities with fishermen setting out for sea. With a high rock promontory and a calm bay of blue waters, this beach paradise creates a unique aquarelle on moonlit nights.</h6>
 								<h6>Samudra Beach, A large promontory separates this part from the southern side. Samudra Beach doesn't have tourists thronging there or hectic business. The local fishermen ply their trade on this part.</h6>
+								<h6><b>Best time to visit : </b>November to February, The winter season is by far the best time to visit Kovalam</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -143,6 +142,7 @@
 								<h6>Agatti is one of the Lakshadweep islands open to tourism. Visitors, however, are allowed to the Island under certain restrictions.</h6>
 								<h6>They are required to obtain Entry Permit from the Lakshadweep Administration for entering or visiting the island.Entry Permit is issued based on the visitor having a confirmed place to stay. </h6>
 								<h6>There are only two hotels or resorts in Agatti: Agatti Island Beach Resort (AIBER) and the other is Sea Shells Beach Resort. A road runs through the island, which can be best enjoyed by hiring a bicycle available at many places.</h6>
+								<h6><b>Best time to visit : </b>November and continues till February.</h6>
 						  	</div>
 						</div>
 					</div>
@@ -158,6 +158,7 @@
 								<h6>Colvá is a famous tourist destination, visited for its beaches, budget hotels, guest houses, beach shacks, food stalls, restaurants, pubs and bars. The beaches are constantly monitored by lifeguards, and the swimming areas are flagged for warnings.</h6>
 								<h6>The village had significant importance to Portugal and was the retreat for Goa's high society, who would come to Colvá for their "Mundanca" or change of air.</h6>
 								<h6>The beach is particularly busy in October, when hordes of religious pilgrims come and visit Colvá Church, called Igreja de Nossa Senhora das Merces, that was founded in 1630 by the Roiz family and rebuilt in the eighteenth century on the village square.</h6>
+								<h6><b>Best time to visit : </b>November to February is the best time to head out for Colva Beach.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -171,19 +172,21 @@
 								<h6>Puri Beach is a beach in the city of Puri in the state of Odisha, India. It is on the shore of the Bay of Bengal.</h6>
 								<h6> The beach is the site of the annual Puri Beach Festival, which is co-sponsored by the Indian Ministry of Tourism, the city of Odisha, the Development Commissioner of Handicrafts, and the Eastern Zonal Cultural Center, Kolkata.</h6>
 								<h6>The beach hosts sand art displays, including work by international award-winning local sand artist Sudarshan Pattnaik.</h6>
+								<h6><b>Best time to visit : </b>Winters (December-February) are a bit cold, but good to enjoy the beach and visiting temples</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
 							<div class="card-img">
-								<img class="card-img-top" src="images/beaches/serenityBeach.jpg" alt="Card image cap">
+								<img class="card-img-top" src="images/beaches/bagaBeach.jpg" alt="Card image cap">
 							</div>
 						  	<div class="card-body">
-						    	<h5 class="card-title">SERENITY BEACH</h5>
-						    	<h6>As the name suggests, the Serenity beach is perfectly serene and tranquil with an abundance of views that blow your mind.</h6>
-								<h6>The scenic view and seclusion of the beach make it ideal for spending some quality time with your special one.</h6>
-								<h6>Best time to visit is October to February</h6>
-								<h6>Things to do is take a stroll on the pathway of the beach, enjoy the perfect sunsets.</h6>
-								<h6></h6>
+						    	<h5 class="card-title">BAGA BEACH</h5>
+						    	<h6>Baga Beach is a popular beach and tourist destination in North Goa.</h6>
+								<h6>Baga is located at the north end of the contiguous beach stretch that starts from Sinquerim, Candolim, leads to Calangute, and then to Baga.</h6>
+								<h6>The beach contains rows of shacks and fishing boats, and at high tide the beach is narrow.</h6>
+								<h6>The beach is named after the Baga Creek, which empties into the Arabian Sea at the north end of the beach.</h6>
+								<h6>Baga Beach is also famous for water sports, such as parasailing and banana rides, and dolphin cruises. In Baga Beach, new parking has been constructed for around 800 cars or more, and there is baga creek bridge which connects northern part like Arpora, Anjuna etc..</h6>
+								<h6><b>Best time to visit : </b>October to January</h6>
 						  	</div>
 						</div>
 					</div>
