--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			      	<li class="nav-item">
 			        	<a class="nav-link" href="index.html">HOME</a>
 			      	</li>
+			      	<li class="nav-item">
+						<a class="nav-link" href="state.html">STATES & UT</a>
+					</li>
 			      	<li class="nav-item dropdown">
 			        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			          		FAMOUS PLACES
@@ -38,15 +41,9 @@
 				          		<li>
 				          			<a class="dropdown-item" href="religious.html">RELIGIOUS</a>
 				          		</li>
-				          		<li>
-				          			<a class="dropdown-item" href="topVisited.html">TOP VISITED</a>
-				          		</li>
 				        	</ul>
 				        </div>
 			      	</li>
-			      	<li class="nav-item">
-						<a class="nav-link" href="state.html">STATES & UT</a>
-					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">CONTACT</a>
 					</li>
@@ -60,7 +57,7 @@
 			  	<h6 class="text-design text-center">LET'S TOUR TO INDIA. INDIA'S FAMOUS TOURIST PLACES</h6>
 			</div>
 			<div class="container">
-				<div class="row pt-4 pb-4 ">
+				<div class="row pt-5 pb-5">
 					<div class="col-md-4">
 						<div class="card mb-4 p-1">
 							<div class="card-img">
@@ -73,6 +70,7 @@
 								<h6>The tomb is the centrepiece of a 17-hectare complex, which includes a mosque and a guest house, and is set in formal gardens bounded on three sides by a crenellated wall.</h6> 
 								<h6>Construction of the mausoleum was essentially completed in 1643, but work continued on other phases of the project for another 10 years. The Taj Mahal complex is believed to have been completed in its entirety in 1653 at a cost estimated at the time to be around 32 million rupees, which in 2020 would be approximately 70 billion rupees.</h6>
 								<h6>The construction project employed some 20,000 artisans under the guidance of a board of architects led by the court architect to the emperor, Ustad Ahmad Lahauri.</h6>
+								<h6><b>Best time to visit : </b>March to June is the best time to visit the monument. And the best days to plan a visit are between Monday and Thursday.</h6>
 							</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -85,6 +83,7 @@
 								<h6>Ranthambhore was established as the Sawai Madhopur Game Sanctuary in 1955 by the Government of India and was declared one of the Project Tiger reserves in 1973. Ranthambhore became a national park on 1 November 1980. In 1984, the adjacent forests were declared the Sawai Man Singh Sanctuary and Keladevi Sanctuary. In 1992, the Tiger Reserve was expanded to include the adjoining Keladevi Sanctuary in the north and Sawai Mansingh sanctuary to the south along with other forests</h6>
 								<h6>Today it covers an area of 1334 sq. km. Ranthambhore wildlife sanctuary is known for its Bengal tigers, and is a popular place in India to see these animals in their natural jungle habitat</h6> 
 								<h6>Tigers can be easily spotted even in the daytime. The best times for tiger sightings at Ranthambhore National Park are deemed to be in November and May.</h6>
+								<h6><b>Best time to visit : </b>The winter season between October and March is considered the best time to visit Ranthambore National Park</h6>
 							</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -99,6 +98,7 @@
 								<h6>The island is 41 km northeast of the capital city, Port Blair.</h6>
 								<h6>Havelock Island is part of Ritchie’s Archipelago, in India’s Andaman Islands. It’s known for its dive sites and beaches, like Elephant Beach, with its coral reefs. Crescent-shaped Radhanagar Beach is a popular spot for watching the sunset.</h6>
 								<h6>On the island’s east side, rocky sections mark long, tree-lined Vijaynagar Beach. The island's forested interior is home to birdlife such as white-headed mynas and woodpeckers.</h6>
+								<h6><b>Best time to visit : </b>September to May</h6>
 							</div>
 						</div>
 					</div>
@@ -114,6 +114,7 @@
 								<h6>13,300 servicemen's names, including some soldiers and officers from the United Kingdom, are inscribed on the gate.</h6>
 								<h6>Designed by Sir Edwin Lutyens, the gate evokes the architectural style of the triumphal arch such as the Arch of Constantine, in Rome, and is often compared to the Arc de Triomphe in Paris, and the Gateway of India in Mumbai.</h6>
 								<h6>Following the Bangladesh Liberation war in 1972, a structure consisting of a black marble plinth with a reversed rifle, capped by a war helmet and bounded by four eternal flames, was built beneath the archway.</h6>
+								<h6><b>Best time to visit : </b>Open all day on all days of the week,  the best time to visit India Gate is between 07:00 PM and 09:30 PM.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -126,6 +127,7 @@
 								<h6>Qutb Minar was 73-metres tall before the final, fifth section was added after 1369. The tower tapers, and has a 14.3 metres base diameter, reducing to 2.7 metres at the top of the peak.</h6>
 								<h6>It contains a spiral staircase of 379 steps. Its closest comparator is the 62-metre all-brick Minaret of Jam in Afghanistan, of c.1190, a decade or so before the probable start of the Delhi tower. The surfaces of both are elaborately decorated with inscriptions and geometric patterns; in Delhi the shaft is fluted with "superb stalactite bracketing under the balconies" at the top of each stage.</h6>
 								<h6>In general minarets were slow to be used in India, and are often detached from the main mosque where they exist.</h6>
+								<h6><b>Best time to visit : </b>November to March</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -138,6 +140,7 @@
 								<h6>It climbs from about 100 m above sea level at New Jalpaiguri to about 2,200 m at Darjeeling, using six zig zags and five loops to gain altitude.</h6>
 								<h6>Six diesel locomotives handle most of the scheduled service, with daily tourist trains from Darjeeling to Ghum – India's highest railway station – and the steam-hauled Red Panda service from Darjeeling to Kurseong.</h6>
 								<h6>Steam-enthusiast specials are hauled by vintage British-built B-Class steam locomotives. The railway's headquarters are at Kurseong. On 2 December 1999, UNESCO declared the DHR a World Heritage Site. Two more railway lines were later added, and the site became known as one of the mountain railways of India.</h6>
+								<h6><b>Best time to visit : </b>While summer months from April to June are the ideal time to travel to Darjeeling, also prefer to visit the beautiful town during winter months from October to December.</h6>
 						  	</div>
 						</div>
 					</div>
@@ -153,6 +156,7 @@
 								<h6>Amer Fort is known for its artistic style elements. With its large ramparts and series of gates and cobbled paths, the fort overlooks Maota Lake, which is the main source of water for the Amer Palace. Mughal architecture greatly influenced the architectural style of several buildings of the fort.</h6>
 								<h6>Constructed of red sandstone and marble, the attractive, opulent palace is laid out on four levels, each with a courtyard.
 								</h6>
+								<h6><b>Best time to visit : </b>October to March is the perfect time to visit here and to enjoy it.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -166,6 +170,7 @@
 								<h6>The Ganges is a lifeline to millions who live along its course. It is a sacred river and worshipped as the goddess Ganga in Hinduism</h6>
 								<h6>It has been important historically; many former provincial or imperial capitals have been located on its banks. The Ganges is threatened by severe pollution. This poses a danger not only to humans but also to animals; the Ganges is home to approximately 140 species of fish and 90 species of amphibians</h6>
 								<h6>The river also contains reptiles and mammals, including critically endangered species such as the Gharial and South Asian river dolphin.</h6>
+								<h6><b>Best time to visit : </b>during the winter months November to February.</h6>
 						  	</div>
 						</div>
 						<div class="card mb-4 p-1">
@@ -178,11 +183,48 @@
 								<h6>Rashtrapati Bhavan may refer to only the 340-room main building that has the president's official residence, including reception halls, guest rooms and offices, also called the mansion;</h6>
 								<h6>it may also refer to the entire 130-hectare Presidential Estate that additionally includes huge presidential gardens, large open spaces, residences of bodyguards and staff, stables, other offices and utilities within its perimeter walls. </h6>
 								<h6>In terms of area, it is the largest residence of any head of state in the world.</h6>
+								<h6><b>Best time to visit : </b>The visiting days of Rashtrapati Bhavan are as under: Circuit 1: Rashtrapati Bhavan Main Building and the Central Lawn will be open on Thursdays, Fridays, Saturdays and Sundays.</h6>
 						  	</div>
 						</div>
 					</div>
 				</div>
-				<div class="row"></div>
+			</div>
+			<div class="container-fluid aboutIN">
+				<h4 class="text-center text-light text-design mt-3 mb-3">INDIA IS IN BEST WAYS</h4>
+				<div class="mt-3 mb-3">
+					<div class="float-left p-2">
+						<img class="aboutImg img-thumbnail" src="images/safari/farmView.jpg" alt="image"> 
+					</div>
+					<div class="p-2">
+						<h5 class="text-design text-warning">AGRICULTURE</h5>
+				    	<h6>The history of Agriculture in India dates back to Indus Valley Civilization and even before that in some places of Southern India.  India ranks second worldwide in farm outputs. As per 2018, agriculture employed more than 50℅ of the Indian work force and contributed 17–18% to country's GDP.</h6>
+						<h6>As per the 2014 FAO world agriculture statistics India is the world's largest producer of many fresh fruits like banana, mango, guava, papaya, lemon and vegetables like chickpea, okra and milk, major spices like chili pepper, ginger, fibrous crops such as jute, staples such as millets and castor oil seed. India is the second largest producer of wheat and rice, the world's major food staples.</h6>
+						<h6>India is currently the world's second largest producer of several dry fruits, agriculture-based textile raw materials, roots and tuber crops, pulses, farmed fish, eggs, coconut, sugarcane and numerous vegetables. India is ranked under the world's five largest producers of over 80% of agricultural produce items, including many cash crops such as coffee and cotton.</h6>
+					</div>
+				</div>
+				<div class="mt-3 mb-3">
+					<div class="float-right p-2">
+						<img class="aboutImg img-thumbnail" src="images/safari/TouristTajMahal.jpg" alt="image"> 
+					</div>
+					<div class="p-2">
+						<h5 class="text-design text-warning">TOURISM IN INDIA</h5>
+				    	<h6>Tourism in India is important for the country's economy and is growing rapidly. The World Travel and Tourism Council calculated that tourism generated ₹16.91 lakh crore (US$240 billion) or 9.2% of India's GDP in 2018 and supported 42.673 million jobs, 8.1% of its total employment.</h6>
+						<h6>Over 10 million foreign tourists arrived in India in 2017 compared to 8.89 million in 2016, representing a growth of 15.6%. Domestic tourist visits to all states and union territories numbered 1,036.35 million in 2012, an increase of 16.5% from 2011.[9] In 2014, Tamil Nadu, Maharashtra and Uttar Pradesh were the most popular states for tourists.</h6>
+						<h6>The Travel and Tourism Competitiveness Report 2019 ranked India 34th out of 140 countries overall. India improved its ranking by 6 places over the 2017 report which was the greatest improvement among the top 25% of countries ranked.</h6>
+						<h6>The Travel and Tourism Competitiveness Report 2019 ranked India 34th out of 140 countries overall. India improved its ranking by 6 places over the 2017 report which was the greatest improvement among the top 25% of countries ranked.</h6>
+					</div>
+				</div>
+				<div class="mt-3 mb-3">
+					<div class="float-left p-2">
+						<img class="aboutImg img-thumbnail" src="images/safari/healthcare.jpg" alt="image"> 
+					</div>
+					<div class="p-2">
+						<h5 class="text-design text-warning">INDIAN HEALTHCARE</h5>
+				    	<h6>Healthcare has become one of India's largest sectors - both in terms of revenue and employment.</h6>
+						<h6>Healthcare comprises hospitals, medical devices, clinical trials, outsourcing, telemedicine, medical tourism, health insurance and medical equipment.</h6>
+						<h6>The Indian Constitution makes the provision of healthcare in India the responsibility of the state governments, rather than the central federal government. It makes every state responsible for "raising the level of nutrition and the standard of living of its people and the improvement of public health as among its primary duties".</h6>
+					</div>
+				</div>
 			</div>
 		</div>
 		<footer class="container-fluid text-center">
