--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,8 @@
 		  	<a href="#" title="To Top">
 		    	<i class="fa fa-chevron-up text-light mb-3"></i>
 		  	</a>
-		  	<h5>Respect you my Mother Earth</h5>
+		  	<h6 class="text-design-footer text-light" >RESPECT YOU OUR MOTHER EARTH</h6>
+		  	<h6 class="text-design-footer text-dark pt-1" >THIS IS THE SITE MADE FOR DEMONSTRATION OF WEB DEVELOPMENT SKILLS BY AMOL TIVAREKAR.</h6>
 		</footer>
 	</body>
 </html>
