--- a/state.html
+++ b/state.html
@@ -409,10 +409,11 @@
 			</div>
 		</div>
 		<footer class="container-fluid text-center">
-		  	<a href="#myPage" title="To Top">
+		  	<a href="#" title="To Top">
 		    	<i class="fa fa-chevron-up text-light mb-3"></i>
 		  	</a>
-		  	<h5>Respect you my Mother Earth</h5>
+		  	<h6 class="text-design-footer text-light" >RESPECT YOU OUR MOTHER EARTH</h6>
+		  	<h6 class="text-design-footer text-dark pt-1" >THIS IS THE SITE MADE FOR DEMONSTRATION OF WEB DEVELOPMENT SKILLS BY AMOL TIVAREKAR.</h6>
 		</footer>
 	</body>
 </html>
